--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,11 @@
     ],
     "autoload": {
         "psr-4": { "Starterkit\\Bundle\\StarterkitThemeBundle\\": "" }
+    },
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
