--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,5 @@
     "autoload": {
         "psr-4": { "Starterkit\\Bundle\\StarterkitThemeBundle\\": "" }
     },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        }
-    }
+    "target-dir": "Starterkit/StarterkitBundle"
 }
