--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
         "psr-0": { "Starterkit\\Bundle\\StarterkitThemeBundle\\": "" }
     },
     "target-dir": "Starterkit/StarterkitBundle",
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
