--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "autoload": {
-        "psr-0": { "Starterkit\\Bundle\\StarterkitThemeBundle\\": "" }
+        "psr-0": { "Starterkit\\ThemeBundle\\": "" }
     },
-    "target-dir": "Starterkit/StarterkitBundle"
+    "target-dir": "Starterkit/ThemeBundle"
 }
