--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
 #    starterkit_theme.example:
-#        class: Starterkit\StarterkitBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+#        class: Starterkit\ThemeBundle\Example
+#        arguments: ["@service_id", "plain_value", "%parameter%"]
